[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = [ "dep:serde" ]

[dependencies]
ndarray = "0.15"
derivative = "2.2"

serde = { version = "1", optional = true }

seahash = "4.1"
rand = { version = "0.8", features = ['small_rng'] }
rand_distr = "0.4"

twmap = "0.12"

num = "0.4"
