[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = "0.6"
winit = "0.29"

egui = "0.26"
egui-wgpu = { version = "0.26", features = ["winit"] }
egui-winit = "0.26"

vek = { version = "0.16.1", default-features = false, features = ["bytemuck", "az", "rgba", "std", "uv"] }
twmap = "0.12"
wgpu = "0.19"
twgpu = "0.3"
image = "0.24.1"

futures = "0.3.21"
pollster = "0.3"

mapgen_core = { package = "core", path = "../core" }
